<resources>
    <string name="app_name">RememberMyScore</string>
    <string name="admob_app_id">ca-app-pub-8906171219763331~3721886578</string>
    <string name="homeAd">ca-app-pub-8906171219763331/1514525637</string>

    <string name="save_game">Save and Close Game</string>
    <string name="save_game_desc">Saves current game and returns to home</string>

    <string name="delete_game">Delete Game</string>
    <string name="delete_game_desc">Deletes active game and returns home</string>

    <string name="reset_game_desc">Resets game with same rules</string>
    <string name="reset_game">Reset Game</string>

    <string name="Lenny">Press the button</string>
    <string name="no_active_games">You have no game active! ¯\\\_(ツ)_/¯</string>

</resources>
